Fix title dino visibility

--- a/style.css
+++ b/style.css
@@ -677,9 +677,9 @@ body {
     }
     
     #titleDino {
-        width: 50px;
-        height: 57px;
-        margin-top: -5px;
+        width: 55px;
+        height: 52px;
+        margin-top: 0;
     }
     
     .subtitle {
